--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
 
         <receiver android:name=".AlarmReceiverEvent" />
 
+        <receiver android:name=".AlarmReceiverIntervention" />
+
     </application>
 
 </manifest>
