--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
         }
     }
     buildToolsVersion '28.0.0'
+
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
